--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -4,5 +4,6 @@
     <string name="tips_ok">好的</string>
     <string name="tips_copy">复制</string>
     <string name="copy_done">复制成功</string>
-    <string name="tips">在使用之前，你需要使用 adb 命令为该应用申请权限,复制以下命令到电脑上执行\n%1$s</string>
+    <string name="tips">在使用之前，你需要使用 adb 命令为该应用申请权限,复制以下命令到电脑上执行:\n\n%1$s\n\n或者使用 root 方式获取权限。</string>
+    <string name="root_failure">无法获取 root 权限</string>
 </resources>
